tests/security/shapeSourcesThroughVec/output.txt
ERROR: TaintedData - input.hack:11:14 - Detected leak of user secret